
** fixes

*** issue 70: "repo-create: allow creation of a repo in a GitHub Organization"

    https://github.com/salewski/ads-github-tools/issues/70

    The 'ads-github-repo-create' tool now has an '--organization=NAME' option
    that can be used to create the repository in the specified (existing)
    GitHub Organization (as opposed to in the account of the authenticated
    GitHub user).


** improvements

*** doc: ads-github-cache(1)

**** minor typo fixes (and similar)

**** note use for ad hoc scripting

     Also includes a new example of such ad hoc scripting by feeding data from
     the cache to the jq(1) command for extracting specific pieces of data
     from the JSON structure, and feeding them into a downstream Unix text
     processing tools in a shell pipeline to accomlish a task.


**** note impact of non-user GitHub object changes on the cache

     It may be surprising to users that cached objects can need updating even
     if the user has not performed any activity with GitHub, so we now point
     out the fact in ads-github-cache(1).

     The example given is the GitHub '/user/repos' endpoint, which represents
     all repositories that the authenticated GitHub user has explicit
     permission (':read', ':write', or ':admin') to access. The cached
     representation of such objects, therefore, can change if the
     authenticated user is a member of any GitHub Organizations -- even
     without the user having performed any activitity with GitHub. For
     example, a new repository could might be added to an Organization to
     which the user is associated, so the user would then have access to the
     new repo; a cache update would be needed to have that new repo reflected
     in the local cache, however.


*** doc: ads-github-whoami(1)

**** minor typo fixes (and similar)


* ads-github-tools 0.3.3 (2021-03-27)

** fixes

*** issue 39: "ads-github-fetch-all-upstreams: default to triangular workflow, but allow override" (reopened)
